# TexasHoldem-NN

./: CMakeLists.txt  README.md
headers/: AIPlayer.h  Deck.h  Hand.h  Player.h
headers/gen_algo/: ElitistCombination.h  GeneticAlgorithm.h  PairCrossover.h
headers/holdem/: Card.h  Deck.h  Hand.h  Player.h  Table.h
headers/nn/: AIPlayer.h  NNEvolver.h  NeuralNetwork.h
headers/test/: DeckTest.h  HandTest.h  HoldemTest.h
src/: Card.cpp  Deck.cpp  Hand.cpp  Player.cpp  Table.cpp  main.cpp
src/gen_algo/: ElitistCombination.cpp  PairCrossover.cpp
src/holdem/: Card.cpp  Deck.cpp  Hand.cpp  Player.cpp  Table.cpp  main.cpp
src/nn/: AIPlayer.cpp  NNEvolver.cpp  NeuralNetwork.cpp
src/test/: DeckTest.cpp  HandTest.cpp  HoldemTest.cpp
